--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,33 +23,14 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
   &-column {
     flex-direction: column;
   }
 }
 
-
 .custom-margin {
   margin: 24px 0px 24px 48px;
-}
-
-.custom-table{
-    width: 60rem;
-    .mat-mdc-table{
-        background-color: var(--mat-sys-surface-variant) !important;
-    }
-}
-
-.mb {
-  margin-bottom: 48px;
-}
-
-.mr {
-  margin-right: 16px;
-}
-
-.primary-color{
-  color: var(--mat-sys-primary);
 }
 
 .loading-overlay {
@@ -64,7 +45,61 @@ body {
   z-index: 9999;
 }
 
-mat-spinner {
-  width: 50px;
-  height: 50px;
+.primary-color {
+  color: var(--mat-sys-primary);
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .custom-margin {
+    margin: 12px 0;
+  }
+
+  .custom-table {
+    width: 100%;
+  }
+
+  .mb {
+    margin-bottom: 24px;
+  }
+
+  .mr {
+    margin-right: 8px;
+  }
+
+  .loading-overlay {
+    top: 20px;
+    left: 20px;
+    height: auto;
+    width: auto;
+  }
+
+  mat-spinner {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .custom-table {
+    width: 80%;
+  }
+
+  .mb {
+    margin-bottom: 36px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .container {
+    padding: 2rem;
+  }
+
+  .custom-table {
+    width: 70rem;
+  }
 }
